--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@binance/connector": "^1.6.0",
+    "axios": "^0.24.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "ws": "^8.4.0"
